Issue: BLOB is not a valid UTF-8 string

--- a/force-app/main/default/layouts/Chat_Message__c-Chat Message Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Chat_Message__c-Chat Message Layout.layout-meta.xml
@@ -26,6 +26,14 @@
                 <behavior>Edit</behavior>
                 <field>Participants__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>From_Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Timestamp__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
