--- a/force-app/main/default/lwc/chatWindow/chatWindow.css
+++ b/force-app/main/default/lwc/chatWindow/chatWindow.css
@@ -1,5 +1,20 @@
-.focus-thread {
-    background-color: #f2f2f2;
+.my-message {
+    background-color: #9EE9A6;
+    box-shadow: 2px 1px 3px 3px #ccc;
+
+}
+
+.their-message {
+    background-color: #AADCF3;
+    box-shadow: -2px 1px 3px 3px #ccc;
+
+}
+
+.both-message {
+    border-radius: 7px;
+    margin: 3px 0px;
+    padding: 5px;
+    clear:both;
 }
 
 .THIS .canEnter .ql-editor.slds-rich-text-area__content {
