--- a/force-app/main/default/lwc/recordLookup/recordLookup.css
+++ b/force-app/main/default/lwc/recordLookup/recordLookup.css
@@ -1,6 +1,5 @@
 .chatter-box{
-    background-color: #FFFFFF; 
+    background-color: #E9F1FA; 
     border-radius: 7px; 
     border:1;
-    height:100px;
 }
